[package]
name = "welford"
version = "0.1.0"
edition = "2021"
description = "Online algorithm for mean and variance, with support for uneven weights."
license = "MIT"
repository = "https://github.com/schneiderfelipe/welford"
homepage = "https://github.com/schneiderfelipe/welford"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
